[gd_scene load_steps=10 format=2]

[ext_resource path="res://Client.gd" type="Script" id=1]
[ext_resource path="res://UI/Avatar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Alice-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/cyan.tres" type="StyleBox" id=4]
[ext_resource path="res://BattleField.gd" type="Script" id=5]
[ext_resource path="res://World/Characters/TestPlayer.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
ip = "127.0.0.1"
port = "5000"
AvatarScene = ExtResource( 2 )
PlayerGOScene = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_ip" type="TextEdit" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="server_port" type="TextEdit" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 140.0

[node name="ConnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 338.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Connect"

[node name="DisconnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Disconnect"

[node name="HideButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Hide Lobby"

[node name="incoming" type="ItemList" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3
custom_styles/bg = ExtResource( 4 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Avatars" type="HBoxContainer" parent="VBoxContainer"]
modulate = Color( 0.964706, 0.945098, 0.945098, 1 )
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 200 )

[node name="BattleField" type="Node2D" parent="."]
visible = false
script = ExtResource( 5 )

[node name="PlayerGOHolder" type="Node2D" parent="BattleField"]

[node name="HUD" type="ReferenceRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ShowLobbyButton" type="Button" parent="HUD"]
margin_left = 124.0
margin_top = 67.0
margin_right = 257.0
margin_bottom = 153.0
size_flags_horizontal = 0
text = "Show Lobby"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ConnectButton" to="." method="start_client"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HideButton" to="." method="_on_HideButton_pressed"]
[connection signal="pressed" from="HUD/ShowLobbyButton" to="." method="_on_ShowLobbyButton_pressed"]
